# sprachhilfer

./: .env_example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: prototyping.ipynb
src/backend/: main.py  settings.py
src/backend/engine/: base.py  r1engine.py
src/frontend/: ui.py
src/templates/: system.py
tests/: test_engine.py  test_r1_engine.py
