[tool.poetry]
name = "sprachhilfer"
version = "0.1.0"
description = "An LLM based German writing tcorrection for the learners of the language"
authors = ["Shawon Ashraf"]
license = "MIT"
readme = "README.md"

package-mode = false

packages = [
    {include="backend", from="src"},
]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.2.2"
openai = "^1.61.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
