[tool.poetry]
name = "sprachhilfer"
version = "0.1.0"
description = "An LLM based German writing tcorrection for the learners of the language"
authors = ["Shawon Ashraf"]
license = "MIT"
readme = "README.md"

packages = [
    {include="backend", from="src"},
]

[tool.poetry.scripts]
backend = "backend.main:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = "^2.2.2"
openai = "^1.61.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
